Added interview photos

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <header>
-    <h1>My Collaborative Site</h1>
+    <h1>Interviews for Chinese 399 Project</h1>
   </header>
   <main>
-    <p id="message">Hello, collaborative world!</p>
-    <button id="inc">Click me</button>
+    <h2>Interviews</h2>
+  <img src="images/Lilian1.PNG" alt="Lilian1 interview photo" width="300">
+  <img src="images/Lilian2.PNG" alt="Lilian2 interview photo" width="300">
+    <img src="images/Felix.PNG" alt="Felix interview photo" width="300">
   </main>
   <script src="script.js"></script>
 </body>
